Fixed text alignment of messages, formating, Title format

--- a/app/assets/stylesheets/components/_chat.scss
+++ b/app/assets/stylesheets/components/_chat.scss
@@ -3,9 +3,11 @@
 }
 
 .minimized-chat-window {
-	height: 2vh;
+	background-color: #0ea1bc;
+	height: 2.5vh;
 	cursor:pointer;
 	span {
+		color: white;
 		font-size:1.3vh;
 		padding-top:0.3vh;
 
@@ -41,10 +43,11 @@
 		}
 	}
 
-	.chat-title span {
-		color: white;
-		margin:0;
-		display:inline-block;
+	.chat-title {
+		span {
+			color: white;
+			margin:0;
+		}
 
 		.small-title {
 			font-size: 1.3vh;
@@ -54,6 +57,10 @@
 		.large-title {
 			font-size: 1.7vh;
 			padding-top: 1vh;
+		}
+
+		div {
+			display:inline-block;
 		}
 	}
 
@@ -116,9 +123,23 @@
 	.chat-conversation {
 		overflow-y:auto;
 		height: 33vh;
-		h6 {
-			color:#636363;
+		.chat-message {
+			text-align: left;
+			margin: 1vh;
+			font-size: 1.4vh;
+			span {
+				color: #a6a6a6;
+				text-align: left;
+				display: inline;
+			}
+
+			div {
+				margin-top: 1vh;
+				text-indent: 1vw;
+				font-size: 1.2vh;
+			}
 		}
+
 	}
 
 	.loading-screen {
